// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Headings Section Title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <h2
      class="Text-sc-1wu7vpu-0-h2 iOWJKL"
      font-size="heading2"
      font-weight="normal"
    >
      Section Title
    </h2>
  </div>
</div>
`;

exports[`Storyshots Headings Subsection Title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <h3
      class="Text-sc-1wu7vpu-0-h3 ehIfZt"
      font-size="heading3"
      font-weight="medium"
    >
      SubsectionTitle
    </h3>
  </div>
</div>
`;

exports[`Storyshots Headings Title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <h1
      class="Text-sc-1wu7vpu-0-h1 kYDQJN"
      font-size="heading1"
      font-weight="light"
    >
      Title
    </h1>
  </div>
</div>
`;

exports[`Storyshots Headings With a custom margin 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <h1
      class="Text-sc-1wu7vpu-0-h1 qNyVx"
      font-size="heading1"
      font-weight="light"
    >
      Title
    </h1>
    <p
      class="Text-sc-1wu7vpu-0 RbfMK"
      color="currentColor"
      font-size="medium"
    >
      Lorem ipsum
    </p>
  </div>
</div>
`;
